--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,133 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h1>HTML Form</h1>
+    <form method="POST" action="http://localhost:8080">
+      <fieldset class="field">
+        <legend>Personal information</legend>
+        <label class="form_field">
+          Surname:
+          <input
+          type="text"
+          name="Surname"
+          autocomplete="off"
+          >
+        </label>
+        <label class="form_field">
+          Name:
+          <input
+          type="text"
+          name="Name"
+          autocomplete="off"
+          >
+        </label>
+        <label class="form_field">
+          How old are You?
+          <input
+          type="number"
+          name="age"
+          min="1"
+          max="100"
+          value="12"
+          >
+        </label>
+        <label class="form_field">
+          Full date of birth:
+          <input type="date" name="date">
+        </label>
+        <label class="form_field">
+          I accept the term of the agreement
+          <input type="checkbox" name="term">
+        </label>
+      </fieldset>
+
+      <fieldset class="field">
+        <legend>Registration</legend>
+        <label class="form_field">
+          E-mail:
+          <input
+          type="email"
+          name="email"
+          placeholder="email@example.com"
+          >
+        </label>
+        <label class="form_field">
+          Password:
+          <input
+          type="password"
+          name="password"
+          minlength="4"
+          maxlength="20"
+          required
+          >
+        </label>
+      </fieldset>
+
+      <fieldset class="field">
+        <legend>An interesting fact about you!</legend>
+        <label class="form_field">
+          Do you love cats?
+          <input
+          type="radio"
+          name="cat lover"
+          value="no"
+          > Yes
+          <input
+          type="radio"
+          name="cat lover"
+          value="no"
+          > No
+        </label>
+        <label class="form_field">
+          What is your favorite color?
+          <input type="color" name="color">
+        </label>
+        <label class="form_field">
+          What time do you go to bed?
+          <input type="time" name="time">
+        </label>
+        <label class="form_field">
+          What are your favorite brand of cars?
+          <select
+          name="car"
+          required
+          multiple
+          >Choose the car
+            </option>
+            <option value="BMW">BMW</option>
+            <option value="Mercedes">Audi</option>
+            <option value="Zaporozhets">Lada</option>
+          </select>
+        </label>
+        <label class="form_field">
+            How do you rate our work?
+          <input type="range" value="0">
+        </label>
+
+
+      </fieldset>
+
+      <fieldset class="field">
+        <legend>Additional info</legend>
+        <label class="form_field">
+          Comments
+          <textarea
+          name="comment"
+          cols="20"
+          rows="2"
+          >
+          </textarea>
+        </label>
+        <label class="form_field">
+          Would you recommend us?
+          <select name="recommend">
+            <option value="yes">Yes</option>
+            <option value="no">No</option>
+          </select>
+        </label>
+      </fieldset>
+
+      <button type="submit">Submit</button>
+    </form>
     <script type="text/javascript" src="./main.js"></script>
   </body>
 </html>
